<resources>
    <string name="app_name">GSP_MedidasyFiguras</string>
    <string name="titulo_opciones">OPCIONES</string>
    <string name="areas">AREAS</string>
    <string name="volumenes">VOLÚMENES</string>
    <string name="operaciones_realizadas">OPERACIONES REALIZADAS</string>
    <string name="cuadrado">CUADRADO</string>
    <string name="rectangulo">RECTÁNGULO</string>
    <string name="triangulo">TRIÁNGULO</string>
    <string name="circulo">CÍRCULO</string>
    <string name="esfera">ESFERA</string>
    <string name="cilindro">CILINDRO</string>
    <string name="cono">CONO</string>
    <string name="cubo">CUBO</string>
    <string name="valor_lado">Valor del Lado: </string>
    <string name="calcular">CALCULAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="numero">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
    <string name="mensaje_error_lado">Digite el valor del lado</string>
    <string name="area_del_cuadrado">Area del cuadrado</string>
    <string name="valor_base">"Valor de la base: "</string>
    <string name="valor_altura">"Valor de la altura: "</string>
    <string name="mensaje_error_base">Digite el valor de la base</string>
    <string name="mensaje_error_altura">Digite el valor de la altura</string>
    <string name="area_del_rectangulo">Area del Rectangulo</string>
    <string name="area_del_triangulo">Area del Triangulo</string>
    <string name="area_del_circulo">Area del Círculo</string>
    <string name="valor_radio">"Valor del radio: "</string>
    <string name="mensaje_error_radio">Digite el valor del radio</string>
    <string name="volumen_esfera">Volumen de la esfera</string>
    <string name="volumen_cilindro">Volumen del cilindro</string>
    <string name="volumen_cono">Volumen del cono</string>
    <string name="volumen_cubo">Volumen del cubo</string>


    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones_realizadas</item>
    </string-array>

    <string-array name="arrareas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>

    <string-array name="arrvolumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>