<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cono">

    <TextView
        android:id="@+id/lblTituloCono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/cono"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblRadioCono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/valor_radio"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtVlrRadioCono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/lblAlturaCono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/valor_altura"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtVlrAlturaCono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularCono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:layout_weight="1"
            android:onClick="calcularcono"
            android:text="@string/calcular"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLimpiarCono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:layout_weight="1"
            android:onClick="limpiarcono"
            android:text="@string/limpiar"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblResultadoCono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8sp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>